# knot-troubleshooting-deploy

./: .gitignore  CONTENT.md  README.md  pyproject.toml
app/core/: data_handler.py  parse_har.py  parse_logs.py  pattern_detector.py
app/web/: streamlit_app.py
models/: __init__.py  analyzer.py  config.py  openai_functions.py  prompt_template.py
utils/: email_handler.py
